[gd_scene load_steps=31 format=2]

[ext_resource path="res://src/ui/ui.gd" type="Script" id=1]
[ext_resource path="res://src/ui/EscapeMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/graphics/ui/frame-export.png" type="Texture" id=4]
[ext_resource path="res://src/ui/Settle.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/Inventory.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/ui/Decree.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/main_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/graphics/decorations/gold_resource.png" type="Texture" id=9]
[ext_resource path="res://src/ui/IslandShop.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/ui/ShipUpgrades.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/ui/Stamina.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/ui/RestartDecree.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/ui/Minimap.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/ui/Map.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/ui/ControlsTip.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/graphics/ui/keyboard/key_enter.png" type="Texture" id=17]
[ext_resource path="res://assets/graphics/ui/playstation/playstation1.png" type="Texture" id=18]
[ext_resource path="res://assets/graphics/ui/playstation/playstation4.png" type="Texture" id=19]
[ext_resource path="res://assets/graphics/ui/keyboard/key_space_blank.png" type="Texture" id=20]
[ext_resource path="res://assets/graphics/boat/small_boat_LR_1.png" type="Texture" id=21]
[ext_resource path="res://assets/graphics/boat/anchor-large.png" type="Texture" id=22]
[ext_resource path="res://src/ui/Instructions.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/ui/NameIsland.tscn" type="PackedScene" id=24]
[ext_resource path="res://assets/graphics/ui/keyboard/key_m.png" type="Texture" id=25]
[ext_resource path="res://assets/graphics/ui/playstation/playstation8.png" type="Texture" id=26]

[sub_resource type="Animation" id=1]
resource_name = "name_label"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("IslandNameView:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 3.3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 70.1241 ), Vector2( 0, 70.1241 ), Vector2( 0, -7.7485 ) ]
}

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 144, 48 )
margin_left = 48.0
margin_right = 48.0
margin_top = 5.0
margin_bottom = 5.0
expand_margin_left = 48.0
expand_margin_right = 48.0

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/BLKCHCRY.TTF"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="EscapeMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/name_label = SubResource( 1 )

[node name="Minimap" parent="." instance=ExtResource( 14 )]
margin_left = 916.0
margin_top = 108.0
margin_right = 956.0
margin_bottom = 148.0

[node name="IslandNameView" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="IslandNameView"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 461.5
margin_top = -54.1106
margin_right = 533.5
margin_bottom = -6.1106
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 36, 0 )
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IslandNameView"]
anchor_top = 0.025
anchor_bottom = 0.0250001
margin_left = 469.0
margin_top = -50.0
margin_right = 569.0
margin_bottom = -11.809
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Heyhey
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="." instance=ExtResource( 6 )]
margin_left = 241.884
margin_top = 270.454
margin_right = 281.883
margin_bottom = 310.454

[node name="Stamina" parent="." instance=ExtResource( 12 )]
margin_left = 6.93979
margin_top = 17.1181
margin_right = 46.9398
margin_bottom = 57.1181

[node name="GoldCount" type="Control" parent="."]
margin_left = 0.587463
margin_top = 2.92004
margin_right = 40.5875
margin_bottom = 42.92
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GoldCount"]
margin_left = 59.0
margin_top = 542.0
margin_right = 99.0
margin_bottom = 593.0
custom_fonts/font = SubResource( 4 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GoldCount"]
margin_left = 4.20471
margin_top = 540.306
margin_right = 52.2047
margin_bottom = 588.306
texture = ExtResource( 9 )
expand = true

[node name="Decree" parent="." instance=ExtResource( 7 )]
margin_left = -18.1583
margin_right = 21.8417

[node name="RestartDecree" parent="." instance=ExtResource( 13 )]
visible = false

[node name="IslandShop" parent="." instance=ExtResource( 10 )]
visible = false

[node name="ShipUpgrades" parent="." instance=ExtResource( 11 )]
visible = false

[node name="Controls" type="Control" parent="."]
margin_left = 851.114
margin_top = 522.039
margin_right = 891.114
margin_bottom = 562.039
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boat" parent="Controls" instance=ExtResource( 16 )]
visible = false
margin_top = -42.6009
margin_bottom = -42.6009
image_texture = "res://assets/graphics/boat/small_boat_LR_1.png"

[node name="Keyboard" parent="Controls/Boat/HBoxContainer" index="0"]
texture = ExtResource( 20 )

[node name="PlayStation" parent="Controls/Boat/HBoxContainer" index="2"]
texture = ExtResource( 19 )

[node name="TextureRect" parent="Controls/Boat/HBoxContainer" index="4"]
texture = ExtResource( 21 )

[node name="Map" parent="Controls" instance=ExtResource( 16 )]
margin_left = 31.1123
margin_top = 34.8986
margin_right = 31.1123
margin_bottom = 34.8986
text = "Map"

[node name="Keyboard" parent="Controls/Map/HBoxContainer" index="0"]
texture = ExtResource( 25 )

[node name="PlayStation" parent="Controls/Map/HBoxContainer" index="2"]
texture = ExtResource( 26 )

[node name="TextureRect" parent="Controls/Map/HBoxContainer" index="4"]
texture = ExtResource( 21 )

[node name="LargeBoat" parent="Controls" instance=ExtResource( 16 )]
visible = false
margin_top = -42.6009
margin_bottom = -42.6009
image_texture = "res://assets/graphics/boat/boat_LR_1.png"

[node name="Keyboard" parent="Controls/LargeBoat/HBoxContainer" index="0"]
texture = ExtResource( 20 )

[node name="PlayStation" parent="Controls/LargeBoat/HBoxContainer" index="2"]
texture = ExtResource( 19 )

[node name="TextureRect" parent="Controls/LargeBoat/HBoxContainer" index="4"]
texture = ExtResource( 21 )

[node name="Interact" parent="Controls" instance=ExtResource( 16 )]
visible = false
image_texture = "res://assets/graphics/boat/anchor-large.png"

[node name="Keyboard" parent="Controls/Interact/HBoxContainer" index="0"]
texture = ExtResource( 17 )

[node name="PlayStation" parent="Controls/Interact/HBoxContainer" index="2"]
texture = ExtResource( 18 )

[node name="TextureRect" parent="Controls/Interact/HBoxContainer" index="4"]
texture = ExtResource( 22 )

[node name="Settle" parent="Controls" instance=ExtResource( 16 )]
visible = false
image_texture = "res://assets/graphics/settlements/flag_0.png"

[node name="Keyboard" parent="Controls/Settle/HBoxContainer" index="0"]
texture = ExtResource( 17 )

[node name="PlayStation" parent="Controls/Settle/HBoxContainer" index="2"]
texture = ExtResource( 18 )

[node name="TextureRect" parent="Controls/Settle/HBoxContainer" index="4"]
texture = ExtResource( 22 )

[node name="Map" parent="." instance=ExtResource( 15 )]
visible = false

[node name="Instructions" parent="." instance=ExtResource( 23 )]
visible = false

[node name="Settle" parent="." instance=ExtResource( 5 )]
visible = false

[node name="NameIsland" parent="." instance=ExtResource( 24 )]
visible = false

[editable path="Controls/Boat"]

[editable path="Controls/Map"]

[editable path="Controls/LargeBoat"]

[editable path="Controls/Interact"]

[editable path="Controls/Settle"]
